[gd_scene load_steps=4 format=2]

[ext_resource path="res://Experiments/ElementBending/Sprites/spr_earth_wall.png" type="Texture" id=1]
[ext_resource path="res://Experiments/ElementBending/Objects/EarthWall/EarthWall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[node name="EarthWall" type="Node2D"]
script = ExtResource( 2 )
lifetime = 10.0

[node name="DeploymentArea" type="Area2D" parent="."]

[node name="HitBoxCollision" type="CollisionShape2D" parent="DeploymentArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DeploymentArea/HitBoxCollision"]
texture = ExtResource( 1 )

[node name="HitBoxBody" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="DeploymentArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="DeploymentArea" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="DeploymentArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DeploymentArea" to="." method="_on_DeploymentArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
